--- a/Tree_Counting.ipynb
+++ b/Tree_Counting.ipynb
@@ -10,14 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "23c410a4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# IMG_NAME = \"YPE_A_P19A1\"\n",
-    "LADANG = 'SSK_CHA'\n",
-    "source = \"D:/03_SDPR_TREE_COUNT/\"+LADANG+\"/\"#directory to a folder that contains image and prediction label.\n",
+    "LADANG = 'TDB'\n",
+    "source = \"D:/7_Project/PKPS/\"+LADANG#directory to a folder that contains image and prediction label.\n",
     "IMG_PATH = source+'/IMG/'#+IMG_NAME+\".tif\"\n",
     "MODEL = \"sdpr.pt\""
    ]
@@ -26,9 +26,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f7265cc9",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -43,6 +41,7 @@
     "    try:\n",
     "        # List all files in the folder.\n",
     "        files = os.listdir(folder_path)\n",
+    "        print(files)\n",
     "\n",
     "        # Filter only the .tif files and print their names.\n",
     "        i=0\n",
@@ -58,14 +57,14 @@
     "                !sahi predict --slice_width 640 --slice_height 640 --overlap_height_ratio 0.3 --overlap_width_ratio 0.3 --model_confidence_threshold 0.25 --source {IMG_PATH}{file} --model_path sahi/{MODEL} --model_type yolov8 --export_pickle\n",
     "                end_time = time.time()\n",
     "                elapsed_time = end_time - start_time\n",
-    "                print(f\"Elapsed time: {elapsed_time:.6f} seconds\")\n",
+    "                print(f\"Elapsed time: {elapsed_time:.2f} seconds\")\n",
     "                #=========================================================================#                \n",
     "                #PICKLE TO YOLO                \n",
     "                #=========================================================================#\n",
     "                IMG_NAME = os.path.splitext(file)[0]\n",
     "                print(IMG_NAME)\n",
-    "                dir_path = 'C:/Users/aecas/TreeCounting/yolo-v8-palm-tree-detection'\n",
-    "                pickle_file = dir_path+'/runs/predict/exp/pickles/'+IMG_NAME+'.pickle'\n",
+    "                dir_path = 'D:/7_Project/palmtree_detection/runs/predict/exp/'\n",
+    "                pickle_file = dir_path+'pickles/'+IMG_NAME+'.pickle'\n",
     "                # Load data from pickle file\n",
     "                with open(pickle_file, 'rb') as f:\n",
     "                    data = pickle.load(f)\n",
@@ -131,7 +130,7 @@
     "                #Save YOLO text file\n",
     "                #=========================================================================#\n",
     "                # Save YOLO data to a text file\n",
-    "                file_path='C:/Users/aecas/TreeCounting/yolo-v8-palm-tree-detection/runs/predict/exp/'+IMG_NAME+'.txt'\n",
+    "                file_path=dir_path+IMG_NAME+'.txt'\n",
     "                with open(file_path, 'w') as f:\n",
     "                    for row in yolo_data:\n",
     "                        f.write(row + '\\n')\n",
@@ -165,7 +164,7 @@
     "                    except FileExistsError:\n",
     "                        print(f\"Error: A file already exists at '{destination_path}'.\")\n",
     "\n",
-    "                folder_path = source+'predict'\n",
+    "                folder_path = source+'/predict'\n",
     "                destination_path = folder_path+\"/\"+IMG_NAME+'.txt'\n",
     "\n",
     "                create_folder(folder_path)\n",
@@ -187,9 +186,9 @@
     "                        print(f\"Error: Permission denied to delete folder '{folder_path}'.\")\n",
     "\n",
     "                # Example usage:\n",
-    "                folder_path = 'C:/Users/aecas/TreeCounting/yolo-v8-palm-tree-detection/runs/predict/exp'\n",
+    "                # folder_path = 'D:/7_Project/palmtree_detection/runs/predict/exp'\n",
     "\n",
-    "                delete_folder(folder_path)                \n",
+    "                delete_folder(dir_path)                \n",
     "                #=========================================================================#\n",
     "                \n",
     "    except FileNotFoundError:\n",
@@ -203,7 +202,7 @@
     "print_tif_file_names(IMG_PATH)\n",
     "end_time = time.time()\n",
     "elapsed_time = (end_time - start_time)/60\n",
-    "print(f\"Elapsed time: {elapsed_time:.6f} minutes\")\n",
+    "print(f\"Elapsed time: {elapsed_time:.2f} minutes\")\n",
     "print(\"PREDICITON FINISH\")"
    ]
   },
@@ -218,6 +217,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "70541b7c-f7ec-4e8d-b1d3-3a6fa7cdb02d",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "pip install rasterio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "6e5d1d06",
    "metadata": {},
    "outputs": [],
@@ -235,10 +246,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8c7710e9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D:\\7_Project\\palmtree_detection\n"
+     ]
+    }
+   ],
    "source": [
     "home = os.getcwd()\n",
     "os.chdir(home)\n",
@@ -259,17 +278,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9ae08b64",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "haluu\n",
+      "Please enter only: \n",
+      "yes, y, no, n\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "TDB Folder exist, remove it?   Answer:  y\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TDB Folder created\n",
+      "fname: D:/7_Project/PKPS/TDB/TDB\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[WinError 2] The system cannot find the file specified",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\shutil.py:886\u001b[0m, in \u001b[0;36mmove\u001b[1;34m(src, dst, copy_function)\u001b[0m\n\u001b[0;32m    885\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 886\u001b[0m     os\u001b[38;5;241m.\u001b[39mrename(src, real_dst)\n\u001b[0;32m    887\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mOSError\u001b[39;00m:\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 2] The system cannot find the file specified: 'D:/7_Project/PKPS/TDB/TDB.gpkg' -> 'D:/7_Project/PKPS/TDB/GPKJ'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 32\u001b[0m\n\u001b[0;32m     30\u001b[0m source_path \u001b[38;5;241m=\u001b[39m source\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m+\u001b[39mLADANG\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.gpkg\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m     31\u001b[0m destination_path \u001b[38;5;241m=\u001b[39m source\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/GPKJ\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m---> 32\u001b[0m shutil\u001b[38;5;241m.\u001b[39mmove(source_path, destination_path)\n\u001b[0;32m     34\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAFIQ HENSEM.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\shutil.py:906\u001b[0m, in \u001b[0;36mmove\u001b[1;34m(src, dst, copy_function)\u001b[0m\n\u001b[0;32m    904\u001b[0m         rmtree(src)\n\u001b[0;32m    905\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 906\u001b[0m         copy_function(src, real_dst)\n\u001b[0;32m    907\u001b[0m         os\u001b[38;5;241m.\u001b[39munlink(src)\n\u001b[0;32m    908\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m real_dst\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\shutil.py:460\u001b[0m, in \u001b[0;36mcopy2\u001b[1;34m(src, dst, follow_symlinks)\u001b[0m\n\u001b[0;32m    458\u001b[0m     flags \u001b[38;5;241m|\u001b[39m\u001b[38;5;241m=\u001b[39m _winapi\u001b[38;5;241m.\u001b[39mCOPY_FILE_COPY_SYMLINK\n\u001b[0;32m    459\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 460\u001b[0m     _winapi\u001b[38;5;241m.\u001b[39mCopyFile2(src_, dst_, flags)\n\u001b[0;32m    461\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m dst\n\u001b[0;32m    462\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mOSError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m exc:\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 2] The system cannot find the file specified"
+     ]
+    }
+   ],
    "source": [
     "import shutil\n",
     "import os\n",
     "from shapely.geometry import Point, Polygon\n",
     "\n",
     "DST_CRS= CRS.from_wkt('PROJCRS[\\\"Equirectangular MARS\\\",BASEGEOGCRS[\\\"GCS_MARS\\\",DATUM[\\\"unnamed\\\",ELLIPSOID[\\\"unnamed\\\",3396036.8126024,0,LENGTHUNIT[\\\"metre\\\",1,ID[\\\"EPSG\\\",9001]]]],PRIMEM[\\\"Reference meridian\\\",0,ANGLEUNIT[\\\"degree\\\",0.0174532925199433,ID[\\\"EPSG\\\",9122]]]],CONVERSION[\\\"unnamed\\\",METHOD[\\\"Equidistant Cylindrical (Spherical)\\\",ID[\\\"EPSG\\\",1029]],PARAMETER[\\\"Latitude of 1st standard parallel\\\",-5,ANGLEUNIT[\\\"degree\\\",0.0174532925199433],ID[\\\"EPSG\\\",8823]],PARAMETER[\\\"Longitude of natural origin\\\",180,ANGLEUNIT[\\\"degree\\\",0.0174532925199433],ID[\\\"EPSG\\\",8802]],PARAMETER[\\\"False easting\\\",0,LENGTHUNIT[\\\"metre\\\",1],ID[\\\"EPSG\\\",8806]],PARAMETER[\\\"False northing\\\",0,LENGTHUNIT[\\\"metre\\\",1],ID[\\\"EPSG\\\",8807]]],CS[Cartesian,2],AXIS[\\\"easting\\\",east,ORDER[1],LENGTHUNIT[\\\"metre\\\",1,ID[\\\"EPSG\\\",9001]]],AXIS[\\\"northing\\\",north,ORDER[2],LENGTHUNIT[\\\"metre\\\",1,ID[\\\"EPSG\\\",9001]]]]')\n",
-    "\n",
+    "# print(\"test:\"+source)\n",
     "detections = get_paths(source+'/predict/', 'txt')\n",
     "detections_paths = [source+'/predict/'+file for file in detections]\n",
     "# print(detections_paths)\n",
@@ -288,11 +350,12 @@
     "    geoshapes = gpd.GeoDataFrame(pd.concat([geoshapes,geo],ignore_index=True),crs=init_crs)\n",
     "\n",
     "fname = make_folder(source,LADANG)\n",
+    "\n",
     "print('fname: '+fname)\n",
-    "geoshapes.to_file(fname+'/'+LADANG+'.gpkg', driver='GPKG', crs=init_crs) \n",
+    "geoshapes.to_file(fname+'/'+LADANG+'.gpkg', driver='GPKG', crs=init_crs, engine='fiona') \n",
     "# geoshapes.to_file(fname+'/Inferred_landforms.shp', mode=\"a\", crs=init_crs)\n",
     "\n",
-    "source_path = source+'/'+LADANG\n",
+    "source_path = source+'/'+LADANG'\n",
     "destination_path = source+'/GPKJ'\n",
     "shutil.move(source_path, destination_path)\n",
     "\n",
@@ -302,10 +365,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "eb7eecdd-71ee-45e9-bcdf-91149a2abbea",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "pip install fiona"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "19c111c2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import fiona\n",
+    "print(fiona.__version__)"
+   ]
   }
  ],
  "metadata": {
@@ -324,7 +402,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
