--- a/Tree_Counting.ipynb
+++ b/Tree_Counting.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "# IMG_NAME = \"YPE_A_P19A1\"\n",
-    "LADANG = 'TDB'\n",
+    "LADANG = 'JJT'\n",
     "source = \"D:/7_Project/PKPS/\"+LADANG#directory to a folder that contains image and prediction label.\n",
     "IMG_PATH = source+'/IMG/'#+IMG_NAME+\".tif\"\n",
     "MODEL = \"sdpr.pt\""
@@ -24,10 +24,180 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f7265cc9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start\n",
+      "['JJT_1.tif', 'JJT_2.tif', 'JJT_3.tif', 'JJT_4.tif']\n",
+      "JJT_1.tif\n",
+      "Start prediction: 1 out of 4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Performing inference on images:   0%|          | 0/1 [00:00<?, ?it/s]\n",
+      "                                                                     \n",
+      "\n",
+      "Performing inference on images:   0%|          | 0/1 [01:07<?, ?it/s]\n",
+      "                                                                     \n",
+      "\n",
+      "Performing inference on images:   0%|          | 0/1 [23:14<?, ?it/s]\n",
+      "Performing inference on images: 100%|##########| 1/1 [25:34<00:00, 1534.05s/it]\n",
+      "Performing inference on images: 100%|##########| 1/1 [25:34<00:00, 1534.08s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Performing prediction on 17956 slices.Elapsed time: 1541.81 seconds\n",
+      "JJT_1\n",
+      "\n",
+      "Prediction time is: 1356759.24 ms\n",
+      "Prediction results are successfully exported to runs\\predict\\exp\n",
+      "DATA LOADED\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_25660\\1682105910.py:47: DeprecationWarning: Starting with ImageIO v3 the behavior of this function will switch to that of iio.v3.imread. To keep the current behavior (and make this warning disappear) use `import imageio.v2 as imageio` or call `imageio.v2.imread` directly.\n",
+      "  image = imageio.imread(file_path)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Width: 60000\n",
+      "Height: 60000\n",
+      "CONVERSION COMPLETE\n",
+      "Folder created successfully at 'D:/7_Project/PKPS/JJT/predict'.\n",
+      "File moved successfully from 'D:/7_Project/palmtree_detection/runs/predict/exp/JJT_1.txt' to 'D:/7_Project/PKPS/JJT/predict'.\n",
+      "Folder 'D:/7_Project/palmtree_detection/runs/predict/exp/' and its contents have been deleted.\n",
+      "JJT_2.tif\n",
+      "Start prediction: 2 out of 4\n",
+      "Elapsed time: 1405.60 secondsPerforming prediction on 17956 slices.\n",
+      "Prediction time is: 1298982.80 ms\n",
+      "Prediction results are successfully exported to runs\\predict\\exp\n",
+      "\n",
+      "JJT_2\n",
+      "DATA LOADED\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Performing inference on images:   0%|          | 0/1 [00:00<?, ?it/s]\n",
+      "                                                                     \n",
+      "\n",
+      "Performing inference on images:   0%|          | 0/1 [00:36<?, ?it/s]\n",
+      "                                                                     \n",
+      "\n",
+      "Performing inference on images:   0%|          | 0/1 [21:56<?, ?it/s]\n",
+      "Performing inference on images: 100%|##########| 1/1 [23:18<00:00, 1398.10s/it]\n",
+      "Performing inference on images: 100%|##########| 1/1 [23:18<00:00, 1398.11s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Width: 60000\n",
+      "Height: 60000\n",
+      "CONVERSION COMPLETE\n",
+      "Error: Folder already exists at 'D:/7_Project/PKPS/JJT/predict'.\n",
+      "File moved successfully from 'D:/7_Project/palmtree_detection/runs/predict/exp/JJT_2.txt' to 'D:/7_Project/PKPS/JJT/predict'.\n",
+      "Folder 'D:/7_Project/palmtree_detection/runs/predict/exp/' and its contents have been deleted.\n",
+      "JJT_3.tif\n",
+      "Start prediction: 3 out of 4\n",
+      "Performing prediction on 17956 slices.Elapsed time: 1458.33 seconds\n",
+      "JJT_3\n",
+      "\n",
+      "Prediction time is: 1300474.78 ms\n",
+      "Prediction results are successfully exported to runs\\predict\\exp\n",
+      "DATA LOADED\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Performing inference on images:   0%|          | 0/1 [00:00<?, ?it/s]\n",
+      "                                                                     \n",
+      "\n",
+      "Performing inference on images:   0%|          | 0/1 [00:40<?, ?it/s]\n",
+      "                                                                     \n",
+      "\n",
+      "Performing inference on images:   0%|          | 0/1 [22:04<?, ?it/s]\n",
+      "Performing inference on images: 100%|##########| 1/1 [24:09<00:00, 1449.90s/it]\n",
+      "Performing inference on images: 100%|##########| 1/1 [24:09<00:00, 1449.91s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Width: 60000\n",
+      "Height: 60000\n",
+      "CONVERSION COMPLETE\n",
+      "Error: Folder already exists at 'D:/7_Project/PKPS/JJT/predict'.\n",
+      "File moved successfully from 'D:/7_Project/palmtree_detection/runs/predict/exp/JJT_3.txt' to 'D:/7_Project/PKPS/JJT/predict'.\n",
+      "Folder 'D:/7_Project/palmtree_detection/runs/predict/exp/' and its contents have been deleted.\n",
+      "JJT_4.tif\n",
+      "Start prediction: 4 out of 4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Performing inference on images:   0%|          | 0/1 [00:00<?, ?it/s]\n",
+      "                                                                     \n",
+      "\n",
+      "Performing inference on images:   0%|          | 0/1 [00:28<?, ?it/s]\n",
+      "                                                                     \n",
+      "\n",
+      "Performing inference on images:   0%|          | 0/1 [21:47<?, ?it/s]\n",
+      "Performing inference on images: 100%|##########| 1/1 [22:43<00:00, 1363.88s/it]\n",
+      "Performing inference on images: 100%|##########| 1/1 [22:43<00:00, 1363.88s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elapsed time: 1372.84 secondsPerforming prediction on 17956 slices.\n",
+      "Prediction time is: 1293780.03 ms\n",
+      "Prediction results are successfully exported to runs\\predict\\exp\n",
+      "\n",
+      "JJT_4\n",
+      "DATA LOADED\n",
+      "Width: 60000\n",
+      "Height: 60000\n",
+      "CONVERSION COMPLETE\n",
+      "Error: Folder already exists at 'D:/7_Project/PKPS/JJT/predict'.\n",
+      "File moved successfully from 'D:/7_Project/palmtree_detection/runs/predict/exp/JJT_4.txt' to 'D:/7_Project/PKPS/JJT/predict'.\n",
+      "Folder 'D:/7_Project/palmtree_detection/runs/predict/exp/' and its contents have been deleted.\n",
+      "\n",
+      "Elapsed time: 96.82 minutes\n",
+      "PREDICITON FINISH\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import time\n",
@@ -54,7 +224,7 @@
     "                #START PREDICTION\n",
     "                #=========================================================================#\n",
     "                start_time = time.time()\n",
-    "                !sahi predict --slice_width 640 --slice_height 640 --overlap_height_ratio 0.3 --overlap_width_ratio 0.3 --model_confidence_threshold 0.25 --source {IMG_PATH}{file} --model_path sahi/{MODEL} --model_type yolov8 --export_pickle\n",
+    "                !sahi predict --slice_width 640 --slice_height 640 --overlap_height_ratio 0.3 --overlap_width_ratio 0.3 --model_confidence_threshold 0.40 --source {IMG_PATH}{file} --model_path sahi/{MODEL} --model_type yolov8 --export_pickle\n",
     "                end_time = time.time()\n",
     "                elapsed_time = end_time - start_time\n",
     "                print(f\"Elapsed time: {elapsed_time:.2f} seconds\")\n",
@@ -216,10 +386,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "6e5d1d06",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "03/18/2025 10:27:26 - INFO - numexpr.utils -   Note: NumExpr detected 16 cores but \"NUMEXPR_MAX_THREADS\" not set, so enforcing safe limit of 8.\n",
+      "03/18/2025 10:27:26 - INFO - numexpr.utils -   NumExpr defaulting to 8 threads.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from adds.GenUtils import question, get_types, get_paths, make_folder, askPath, askFile, askInt, askFloat\n",
@@ -234,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "8c7710e9",
    "metadata": {},
    "outputs": [
@@ -254,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "0b7df25f",
    "metadata": {},
    "outputs": [],
@@ -266,8 +445,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "9ae08b64",
+   "execution_count": 6,
+   "id": "c27ec8e0-e964-4331-b20e-1791c644008b",
    "metadata": {},
    "outputs": [
     {
@@ -275,24 +454,9 @@
      "output_type": "stream",
      "text": [
       "haluu\n",
-      "Please enter only: \n",
-      "yes, y, no, n\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "TDB Folder exist, remove it?   Answer:  y\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TDB Folder created\n",
-      "fname: D:/7_Project/PKPS/TDB/TDB\n",
+      "JJT  Folder not exist, creating.\n",
+      "Created new  JJT  Folder\n",
+      "fname: D:/7_Project/PKPS/JJT/JJT\n",
       "AFIQ HENSEM.\n"
      ]
     }
@@ -301,6 +465,8 @@
     "import shutil\n",
     "import os\n",
     "from shapely.geometry import Point, Polygon\n",
+    "from pyproj import CRS\n",
+    "import fiona\n",
     "\n",
     "DST_CRS= CRS.from_wkt('PROJCRS[\\\"Equirectangular MARS\\\",BASEGEOGCRS[\\\"GCS_MARS\\\",DATUM[\\\"unnamed\\\",ELLIPSOID[\\\"unnamed\\\",3396036.8126024,0,LENGTHUNIT[\\\"metre\\\",1,ID[\\\"EPSG\\\",9001]]]],PRIMEM[\\\"Reference meridian\\\",0,ANGLEUNIT[\\\"degree\\\",0.0174532925199433,ID[\\\"EPSG\\\",9122]]]],CONVERSION[\\\"unnamed\\\",METHOD[\\\"Equidistant Cylindrical (Spherical)\\\",ID[\\\"EPSG\\\",1029]],PARAMETER[\\\"Latitude of 1st standard parallel\\\",-5,ANGLEUNIT[\\\"degree\\\",0.0174532925199433],ID[\\\"EPSG\\\",8823]],PARAMETER[\\\"Longitude of natural origin\\\",180,ANGLEUNIT[\\\"degree\\\",0.0174532925199433],ID[\\\"EPSG\\\",8802]],PARAMETER[\\\"False easting\\\",0,LENGTHUNIT[\\\"metre\\\",1],ID[\\\"EPSG\\\",8806]],PARAMETER[\\\"False northing\\\",0,LENGTHUNIT[\\\"metre\\\",1],ID[\\\"EPSG\\\",8807]]],CS[Cartesian,2],AXIS[\\\"easting\\\",east,ORDER[1],LENGTHUNIT[\\\"metre\\\",1,ID[\\\"EPSG\\\",9001]]],AXIS[\\\"northing\\\",north,ORDER[2],LENGTHUNIT[\\\"metre\\\",1,ID[\\\"EPSG\\\",9001]]]]')\n",
     "# print(\"test:\"+source)\n",
@@ -309,53 +475,88 @@
     "# print(detections_paths)\n",
     "geodataframes = det2gdf(detections_paths, 'tif', IMG_PATH)\n",
     "\n",
-    "try:\n",
-    "    geoshapes.crs\n",
-    "except:\n",
-    "    geoshapes = geodataframes[0]\n",
-    "    \n",
-    "init_crs = geodataframes[0].crs\n",
-    "for geo in geodataframes:\n",
+    "# Initialize geoshapes with the first GeoDataFrame\n",
+    "geoshapes = geodataframes[0].copy()  # Use copy() to avoid modifying the original\n",
+    "\n",
+    "# Set the initial CRS\n",
+    "init_crs = geoshapes.crs\n",
+    "\n",
+    "# Iterate over the rest of the GeoDataFrames\n",
+    "for geo in geodataframes[1:]:\n",
+    "    # Transform to the common CRS if necessary\n",
     "    if geo.crs != init_crs:\n",
     "        geo = geo.to_crs(init_crs)\n",
-    "#    geoshapes.append(geo, ingore_index=True)\n",
-    "    geoshapes = gpd.GeoDataFrame(pd.concat([geoshapes,geo],ignore_index=True),crs=init_crs)\n",
+    "    \n",
+    "    # Concatenate the GeoDataFrames\n",
+    "    geoshapes = gpd.GeoDataFrame(pd.concat([geoshapes, geo], ignore_index=True), crs=init_crs)\n",
     "\n",
-    "fname = make_folder(source,LADANG)\n",
+    "# Rest of your code remains the same\n",
+    "fname = make_folder(source, LADANG)\n",
     "\n",
-    "print('fname: '+fname)\n",
-    "geoshapes.to_file(fname+'/'+LADANG+'.gpkg', driver='GPKG', crs=init_crs, engine='fiona') \n",
-    "# geoshapes.to_file(fname+'/Inferred_landforms.shp', mode=\"a\", crs=init_crs)\n",
+    "print('fname: ' + fname)\n",
+    "geoshapes.to_file(fname + '/' + LADANG + '.gpkg', driver='GPKG', crs=init_crs, engine='fiona')\n",
     "\n",
-    "source_path = source+'/'+LADANG\n",
-    "destination_path = source+'/GPKJ'\n",
+    "source_path = source + '/' + LADANG\n",
+    "destination_path = source + '/GPKJ'\n",
     "shutil.move(source_path, destination_path)\n",
     "\n",
-    "print('AFIQ HENSEM.')"
+    "print('AFIQ HENSEM.')\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb7eecdd-71ee-45e9-bcdf-91149a2abbea",
+   "id": "9ae08b64",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "pip install fiona"
+    "# import shutil\n",
+    "# import os\n",
+    "# from shapely.geometry import Point, Polygon\n",
+    "# from pyproj import CRS\n",
+    "# import fiona\n",
+    "\n",
+    "# DST_CRS= CRS.from_wkt('PROJCRS[\\\"Equirectangular MARS\\\",BASEGEOGCRS[\\\"GCS_MARS\\\",DATUM[\\\"unnamed\\\",ELLIPSOID[\\\"unnamed\\\",3396036.8126024,0,LENGTHUNIT[\\\"metre\\\",1,ID[\\\"EPSG\\\",9001]]]],PRIMEM[\\\"Reference meridian\\\",0,ANGLEUNIT[\\\"degree\\\",0.0174532925199433,ID[\\\"EPSG\\\",9122]]]],CONVERSION[\\\"unnamed\\\",METHOD[\\\"Equidistant Cylindrical (Spherical)\\\",ID[\\\"EPSG\\\",1029]],PARAMETER[\\\"Latitude of 1st standard parallel\\\",-5,ANGLEUNIT[\\\"degree\\\",0.0174532925199433],ID[\\\"EPSG\\\",8823]],PARAMETER[\\\"Longitude of natural origin\\\",180,ANGLEUNIT[\\\"degree\\\",0.0174532925199433],ID[\\\"EPSG\\\",8802]],PARAMETER[\\\"False easting\\\",0,LENGTHUNIT[\\\"metre\\\",1],ID[\\\"EPSG\\\",8806]],PARAMETER[\\\"False northing\\\",0,LENGTHUNIT[\\\"metre\\\",1],ID[\\\"EPSG\\\",8807]]],CS[Cartesian,2],AXIS[\\\"easting\\\",east,ORDER[1],LENGTHUNIT[\\\"metre\\\",1,ID[\\\"EPSG\\\",9001]]],AXIS[\\\"northing\\\",north,ORDER[2],LENGTHUNIT[\\\"metre\\\",1,ID[\\\"EPSG\\\",9001]]]]')\n",
+    "# # print(\"test:\"+source)\n",
+    "# detections = get_paths(source+'/predict/', 'txt')\n",
+    "# detections_paths = [source+'/predict/'+file for file in detections]\n",
+    "# # print(detections_paths)\n",
+    "# geodataframes = det2gdf(detections_paths, 'tif', IMG_PATH)\n",
+    "\n",
+    "# try:\n",
+    "#     geoshapes.crs\n",
+    "# except:\n",
+    "#     geoshapes = geodataframes[0]\n",
+    "    \n",
+    "# init_crs = geodataframes[0].crs\n",
+    "# for geo in geodataframes:\n",
+    "#     if geo.crs != init_crs:\n",
+    "#         geo = geo.to_crs(init_crs)\n",
+    "# #    geoshapes.append(geo, ingore_index=True)\n",
+    "#     geoshapes = gpd.GeoDataFrame(pd.concat([geoshapes,geo],ignore_index=True),crs=init_crs)\n",
+    "\n",
+    "# fname = make_folder(source,LADANG)\n",
+    "\n",
+    "# print('fname: '+fname)\n",
+    "# geoshapes.to_file(fname+'/'+LADANG+'.gpkg', driver='GPKG', crs=init_crs, engine='fiona') \n",
+    "# # geoshapes.to_file(fname+'/Inferred_landforms.shp', mode=\"a\", crs=init_crs)\n",
+    "\n",
+    "# source_path = source+'/'+LADANG\n",
+    "# destination_path = source+'/GPKJ'\n",
+    "# shutil.move(source_path, destination_path)\n",
+    "\n",
+    "# print('AFIQ HENSEM.')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19c111c2",
+   "id": "d52a9a97-aa9b-4196-b1d4-060cf8e3dcab",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import fiona\n",
-    "print(fiona.__version__)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
