--- a/Tree_Counting.ipynb
+++ b/Tree_Counting.ipynb
@@ -10,24 +10,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "id": "8f201ead-842c-4d3f-9955-4e296c86fe22",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current directory: D:\\7_Project\\palmtree_detection\n",
+      "Updated directory: D:\\7_Project\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "print (\"Current directory:\" , os.getcwd())\n",
+    "os.chdir(\"..\")\n",
+    "listDir = os.listdir()\n",
+    "#Print the updated directory path\n",
+    "oriPath = os.getcwd()\n",
+    "print (\"Updated directory:\" , os.getcwd())\n",
+    "os.chdir(\"palmtree_detection\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2eb17bdf-844b-41d1-9810-edc59f31422f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D:\\7_Project\\00_PKPS\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(os.path.join(oriPath, listDir[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "23c410a4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# IMG_NAME = \"YPE_A_P19A1\"\n",
-    "LADANG = 'JJT'\n",
-    "source = \"D:/7_Project/PKPS/\"+LADANG#directory to a folder that contains image and prediction label.\n",
+    "LADANG = 'IRAT'\n",
+    "source = f'{os.path.join(oriPath, listDir[0])}/{LADANG}'#directory to a folder that contains image and prediction label.\n",
     "IMG_PATH = source+'/IMG/'#+IMG_NAME+\".tif\"\n",
     "MODEL = \"sdpr.pt\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f7265cc9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start\n",
+      "['IRAT_1.tif', 'IRAT_10.tif', 'IRAT_11.tif', 'IRAT_12.tif', 'IRAT_2.tif', 'IRAT_3.tif', 'IRAT_4.tif', 'IRAT_5.tif', 'IRAT_6.tif', 'IRAT_7.tif', 'IRAT_8.tif', 'IRAT_9.tif']\n",
+      "IRAT_1.tif\n",
+      "Start prediction: 1 out of 12\n",
+      "Performing prediction on 7921 slices.Elapsed time: 602.11 seconds\n",
+      "IRAT_1\n",
+      "\n",
+      "Prediction time is: 548416.33 ms\n",
+      "Prediction results are successfully exported to runs\\predict\\exp\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Performing inference on images:   0%|          | 0/1 [00:00<?, ?it/s]\n",
+      "                                                                     \n",
+      "\n",
+      "Performing inference on images:   0%|          | 0/1 [00:15<?, ?it/s]\n",
+      "                                                                     \n",
+      "\n",
+      "Performing inference on images:   0%|          | 0/1 [09:20<?, ?it/s]\n",
+      "Performing inference on images: 100%|##########| 1/1 [09:57<00:00, 597.29s/it]\n",
+      "Performing inference on images: 100%|##########| 1/1 [09:57<00:00, 597.30s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DATA LOADED\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_2288\\1848301240.py:47: DeprecationWarning: Starting with ImageIO v3 the behavior of this function will switch to that of iio.v3.imread. To keep the current behavior (and make this warning disappear) use `import imageio.v2 as imageio` or call `imageio.v2.imread` directly.\n",
+      "  image = imageio.imread(file_path)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Width: 40000\n",
+      "Height: 40000\n",
+      "CONVERSION COMPLETE\n",
+      "Error: Folder already exists at 'D:\\7_Project\\00_PKPS/IRAT/predict'.\n"
+     ]
+    },
+    {
+     "ename": "Error",
+     "evalue": "Destination path 'D:\\7_Project\\00_PKPS/IRAT/predict\\IRAT_1.txt' already exists",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mError\u001b[0m                                     Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 171\u001b[0m\n\u001b[0;32m    168\u001b[0m     \u001b[38;5;28mprint\u001b[39m()\n\u001b[0;32m    170\u001b[0m start_time \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime()\n\u001b[1;32m--> 171\u001b[0m print_tif_file_names(IMG_PATH)\n\u001b[0;32m    172\u001b[0m end_time \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime()\n\u001b[0;32m    173\u001b[0m elapsed_time \u001b[38;5;241m=\u001b[39m (end_time \u001b[38;5;241m-\u001b[39m start_time)\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m60\u001b[39m\n",
+      "Cell \u001b[1;32mIn[4], line 140\u001b[0m, in \u001b[0;36mprint_tif_file_names\u001b[1;34m(folder_path)\u001b[0m\n\u001b[0;32m    137\u001b[0m destination_path \u001b[38;5;241m=\u001b[39m folder_path\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39mIMG_NAME\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.txt\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m    139\u001b[0m create_folder(folder_path)\n\u001b[1;32m--> 140\u001b[0m move_file(file_path, folder_path)\n\u001b[0;32m    142\u001b[0m \u001b[38;5;66;03m#=========================================================================#\u001b[39;00m\n\u001b[0;32m    143\u001b[0m \u001b[38;5;66;03m#  Delete previous prediction folder(exp)\u001b[39;00m\n\u001b[0;32m    144\u001b[0m \u001b[38;5;66;03m#=========================================================================#\u001b[39;00m\n\u001b[0;32m    146\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mshutil\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[4], line 129\u001b[0m, in \u001b[0;36mprint_tif_file_names.<locals>.move_file\u001b[1;34m(source_path, destination_path)\u001b[0m\n\u001b[0;32m    126\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmove_file\u001b[39m(source_path, destination_path):\n\u001b[0;32m    127\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m    128\u001b[0m         \u001b[38;5;66;03m# Move the file from the source path to the destination path.\u001b[39;00m\n\u001b[1;32m--> 129\u001b[0m         shutil\u001b[38;5;241m.\u001b[39mmove(source_path, destination_path)\n\u001b[0;32m    130\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFile moved successfully from \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00msource_path\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m to \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdestination_path\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    131\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m:\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\shutil.py:884\u001b[0m, in \u001b[0;36mmove\u001b[1;34m(src, dst, copy_function)\u001b[0m\n\u001b[0;32m    881\u001b[0m     real_dst \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(dst, _basename(src))\n\u001b[0;32m    883\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mexists(real_dst):\n\u001b[1;32m--> 884\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m Error(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDestination path \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m already exists\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m real_dst)\n\u001b[0;32m    885\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m    886\u001b[0m     os\u001b[38;5;241m.\u001b[39mrename(src, real_dst)\n",
+      "\u001b[1;31mError\u001b[0m: Destination path 'D:\\7_Project\\00_PKPS/IRAT/predict\\IRAT_1.txt' already exists"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import time\n",
@@ -63,7 +178,7 @@
     "                #=========================================================================#\n",
     "                IMG_NAME = os.path.splitext(file)[0]\n",
     "                print(IMG_NAME)\n",
-    "                dir_path = 'D:/7_Project/palmtree_detection/runs/predict/exp/'\n",
+    "                dir_path = f'{oriPath}/palmtree_detection/runs/predict/exp/'\n",
     "                pickle_file = dir_path+'pickles/'+IMG_NAME+'.pickle'\n",
     "                # Load data from pickle file\n",
     "                with open(pickle_file, 'rb') as f:\n",
@@ -216,10 +331,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6e5d1d06",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "03/19/2025 17:41:53 - INFO - numexpr.utils -   Note: NumExpr detected 16 cores but \"NUMEXPR_MAX_THREADS\" not set, so enforcing safe limit of 8.\n",
+      "03/19/2025 17:41:53 - INFO - numexpr.utils -   NumExpr defaulting to 8 threads.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from adds.GenUtils import question, get_types, get_paths, make_folder, askPath, askFile, askInt, askFloat\n",
@@ -234,10 +358,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "8c7710e9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D:\\7_Project\\palmtree_detection\n"
+     ]
+    }
+   ],
    "source": [
     "home = os.getcwd()\n",
     "os.chdir(home)\n",
@@ -246,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "0b7df25f",
    "metadata": {},
    "outputs": [],
@@ -258,10 +390,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c27ec8e0-e964-4331-b20e-1791c644008b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "haluu\n",
+      "IRAT  Folder not exist, creating.\n",
+      "Created new  IRAT  Folder\n",
+      "fname: D:/7_Project/PKPS/IRAT/IRAT\n",
+      "AFIQ HENSEM.\n"
+     ]
+    }
+   ],
    "source": [
     "import shutil\n",
     "import os\n",
@@ -306,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "9ae08b64",
    "metadata": {
     "scrolled": true
