--- a/Tree_Counting.ipynb
+++ b/Tree_Counting.ipynb
@@ -70,7 +70,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "f7265cc9",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
